Made changes to the project cards.

--- a/index.html
+++ b/index.html
@@ -136,8 +136,10 @@
             <div class="project-card">
                 <div class="color-accent"></div>
                 <div class="project-card-text">
-                    <h4>Super Cool Project</h4>
-                    <p>This is a super cool project!</p>
+                    <h4>GPU Purchasing Bot</h4>
+                    <p>If you can't beat 'em, join em'! A high quality
+                        Bot that will guarantee you get yourself a graphics card!
+                    </p>
                 </div>
                 <div class="project-card-btns">
                     <img src="Icons/star-plus-outline.svg" id="starIcon">
@@ -148,8 +150,11 @@
             <div class="project-card">
                 <div class="color-accent"></div>
                 <div class="project-card-text">
-                    <h4>Super Cool Project</h4>
-                    <p>This is a super cool project!</p>
+                    <h4>Self-Scooting Scooter</h4>
+                    <p>Inspired by self-driving cars of the modern age. This
+                        machine learning driven Scooter can scoot you wherever
+                        you need to go!
+                    </p>
                 </div>
                 <div class="project-card-btns">
                     <img src="Icons/star-plus-outline.svg" id="starIcon">
