Made changes to announcements tab

--- a/index.html
+++ b/index.html
@@ -186,12 +186,16 @@
                         <p>This is an announcement for site-maintenance</p>
                     </div>
                     <div class="announcement">
-                        <h5>Site Maintenance</h5>
-                        <p>This is an announcement for site-maintenance</p>
+                        <h5>Community Share Day</h5>
+                        <p>Come together with your fellow programmers and
+                            share with them some of your upcoming projects.
+                        </p>
                     </div>
                     <div class="announcement">
-                        <h5>Site Maintenance</h5>
-                        <p>This is an announcement for site-maintenance</p>
+                        <h5>Updated Privacy Policy</h5>
+                        <p>This website isn't designed to store any
+                            data so you have nothing to fear!
+                        </p>
                     </div>
                 </div>
             </div>
